# Engine

./: .gitignore
core/: CMakeLists.txt
core/cmake/: global.cmake  vcpkg.cmake
core/include/: core.h  kernel.h
core/include/wry/: global.h
core/include/wry/gfx/: resource.h
core/include/wry/os/windows/: window.h
core/include/wry/reflection/: enum.h
core/include/wry/time/: time.h
core/include/wry/types/: property_t.h  readonly_t.h  retval_t.h  traits.h
core/include/wry/util/: base64.h  static_log2.h  static_strlen.h
core/lib/: core.lib  engine.lib
core/src/: core.cpp  stub.cpp
core/src/gfx/: resource.cpp  system.cpp
core/src/os/windows/: window.cpp
editor/: CMakeLists.txt
editor/cmake/: global.cmake
editor/src/: main copy.cpp  main.cpp
shared/cmake/: Findwrycore.cmake  Findwryd3d12.cmake  Findwrywin32.cmake  common_projects.cmake  global.cmake
wrycore/: CMakeLists.txt
wrycore/include/wry/: gfx.h  io.h  kernel.h
wrycore/include/wry/audio/: system.h
wrycore/include/wry/gfx/: adapter.h  device.h  gfx.h  rendercontext.h  system.h
wrycore/include/wry/io/: filewatcher.h  stream.h
wrycore/include/wry/io/serialization/: binaryserializationreader.h  binaryserializationwriter.h  jsonserializationreader.h  jsonserializationwriter.h  serializable.h
wrycore/include/wry/math/: log2.h
wrycore/include/wry/os/windows/: window.h
wrycore/include/wry/res/: system.h
wrycore/include/wry/time/: timespan.h
wrycore/include/wry/types/: align.h  retval_t.h
wrycore/include/wry/util/: crc32.h  string.h
wrycore/src/: stub.cpp
wrycore/src/gfx/: device.cpp
wryd3d12/: CMakeLists.txt
wryd3d12/include/wry/d3d12/: d3d12.h  system.h
wryd3d12/src/gfx/: adapter.cpp  device.cpp  rendercontext.cpp  system.cpp
wryedit/: CMakeLists.txt
wryedit/cmake/: Findcore.cmake
wryedit/src/: main.cpp
wrywin32/: CMakeLists.txt
wrywin32/src/os/windows/: window.cpp
